--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,123 +1,329 @@
 ---
-import Layout from '../layouts/Layout.astro';
-import Card from '../components/Card.astro';
+import Layout from "../layouts/Layout.astro";
+import directus from "../../lib/directus";
+import { readItems } from "@directus/sdk";
+import Benefit from "../components/Benefit.astro";
+import Navbar from "../components/Navbar.astro";
+import Switcher from "../components/Switcher.astro";
+import FeaturedSolutionsCard from "../components/FeaturedSolutionsCard.astro";
+import { Image } from "astro:assets";
+import { htmlStringOne, htmlStringTwo } from "../constants/htmlStrings";
+import "./_index.css";
+import PriceCard from "../components/PriceCard.astro";
+import Footer from "../components/Footer.astro";
+import Button from "../components/ui/Button.astro";
+
+const priceCards = await directus.request(readItems("priceCards"));
+priceCards.sort(
+  (a, b) => a.price_monthly - b.price_monthly
+);
+
+const benefits = [
+  {
+    imageUrl: "/bar-chart.svg",
+    title: "Competative pricing",
+    description:
+      "Certify Instagram, YouTube, and TikTok creators in seconds with compmrehensive audience insights. Make informed desicions with our tool.",
+  },
+  {
+    imageUrl: "/bar-chart.svg",
+    title: "Competative pricing",
+    description:
+      "Certify Instagram, YouTube, and TikTok creators in seconds with compmrehensive audience insights. Make informed desicions with our tool.",
+  },
+  {
+    imageUrl: "/bar-chart.svg",
+    title: "Competative pricing",
+    description:
+      "Certify Instagram, YouTube, and TikTok creators in seconds with compmrehensive audience insights. Make informed desicions with our tool.",
+  },
+  {
+    imageUrl: "/bar-chart.svg",
+    title: "Competative pricing",
+    description:
+      "Certify Instagram, YouTube, and TikTok creators in seconds with compmrehensive audience insights. Make informed desicions with our tool.",
+  },
+  {
+    imageUrl: "/bar-chart.svg",
+    title: "Competative pricing",
+    description:
+      "Certify Instagram, YouTube, and TikTok creators in seconds with compmrehensive audience insights. Make informed desicions with our tool.",
+  },
+];
+
+const solutionsCards = [
+  {
+    title: "Unlock Precise Influencer Analytics",
+    description:
+      "Certify Instagram, YouTube, and TikTok creators in seconds with compmrehensive audience insights. Make informed desicions with our tool.",
+    miniCard: htmlStringOne,
+  },
+  {
+    title: "Unlock Precise Influencer Analytics",
+    description:
+      "Certify Instagram, YouTube, and TikTok creators in seconds with compmrehensive audience insights. Make informed desicions with our tool.",
+    miniCard: htmlStringTwo,
+  },
+];
+
+const whyIonkol = [
+  {
+    imageUrl: "/lightbulb.svg",
+    title: "Precise Insights",
+    description:
+      "Get accurate, real-time data that helps you make smarter, faster decisions.",
+  },
+  {
+    imageUrl: "/monitor.svg",
+    title: "Precise Insights",
+    description:
+      "Get accurate, real-time data that helps you make smarter, faster decisions.",
+  },
+  {
+    imageUrl: "/piggy-bank.svg",
+    title: "Precise Insights",
+    description:
+      "Get accurate, real-time data that helps you make smarter, faster decisions.",
+  },
+];
 ---
 
-<Layout title="Welcome to Astro.">
-	<main>
-		<svg
-			class="astro-a"
-			width="495"
-			height="623"
-			viewBox="0 0 495 623"
-			fill="none"
-			xmlns="http://www.w3.org/2000/svg"
-			aria-hidden="true"
-		>
-			<path
-				fill-rule="evenodd"
-				clip-rule="evenodd"
-				d="M167.19 364.254C83.4786 364.254 0 404.819 0 404.819C0 404.819 141.781 19.4876 142.087 18.7291C146.434 7.33701 153.027 0 162.289 0H332.441C341.703 0 348.574 7.33701 352.643 18.7291C352.92 19.5022 494.716 404.819 494.716 404.819C494.716 404.819 426.67 364.254 327.525 364.254L264.41 169.408C262.047 159.985 255.147 153.581 247.358 153.581C239.569 153.581 232.669 159.985 230.306 169.408L167.19 364.254ZM160.869 530.172C160.877 530.18 160.885 530.187 160.894 530.195L160.867 530.181C160.868 530.178 160.868 530.175 160.869 530.172ZM136.218 411.348C124.476 450.467 132.698 504.458 160.869 530.172C160.997 529.696 161.125 529.242 161.248 528.804C161.502 527.907 161.737 527.073 161.917 526.233C165.446 509.895 178.754 499.52 195.577 500.01C211.969 500.487 220.67 508.765 223.202 527.254C224.141 534.12 224.23 541.131 224.319 548.105C224.328 548.834 224.337 549.563 224.347 550.291C224.563 566.098 228.657 580.707 237.264 593.914C245.413 606.426 256.108 615.943 270.749 622.478C270.593 621.952 270.463 621.508 270.35 621.126C270.045 620.086 269.872 619.499 269.685 618.911C258.909 585.935 266.668 563.266 295.344 543.933C298.254 541.971 301.187 540.041 304.12 538.112C310.591 533.854 317.059 529.599 323.279 525.007C345.88 508.329 360.09 486.327 363.431 457.844C364.805 446.148 363.781 434.657 359.848 423.275C358.176 424.287 356.587 425.295 355.042 426.275C351.744 428.366 348.647 430.33 345.382 431.934C303.466 452.507 259.152 455.053 214.03 448.245C184.802 443.834 156.584 436.019 136.218 411.348Z"
-				fill="url(#paint0_linear_1805_24383)"></path>
-			<defs>
-				<linearGradient
-					id="paint0_linear_1805_24383"
-					x1="247.358"
-					y1="0"
-					x2="247.358"
-					y2="622.479"
-					gradientUnits="userSpaceOnUse"
-				>
-					<stop stop-opacity="0.9"></stop>
-					<stop offset="1" stop-opacity="0.2"></stop>
-				</linearGradient>
-			</defs>
-		</svg>
-		<h1>Welcome to <span class="text-gradient">Astro</span></h1>
-		<p class="instructions">
-			To get started, open the directory <code>src/pages</code> in your project.<br />
-			<strong>Code Challenge:</strong> Tweak the "Welcome to Astro" message above.
-		</p>
-		<ul role="list" class="link-card-grid">
-			<Card
-				href="https://docs.astro.build/"
-				title="Documentation"
-				body="Learn how Astro works and explore the official API docs."
-			/>
-			<Card
-				href="https://astro.build/integrations/"
-				title="Integrations"
-				body="Supercharge your project with new frameworks and libraries."
-			/>
-			<Card
-				href="https://astro.build/themes/"
-				title="Themes"
-				body="Explore a galaxy of community-built starter themes."
-			/>
-			<Card
-				href="https://astro.build/chat/"
-				title="Community"
-				body="Come say hi to our amazing Discord community. ❤️"
-			/>
-		</ul>
-	</main>
-</Layout>
+<script is:inline>
+  document.addEventListener("DOMContentLoaded", () => {
+    const observer = new IntersectionObserver(
+      (entries) => {
+        entries.forEach((entry) => {
+          if (entry.isIntersecting) {
+            entry.target.classList.add("visible");
+          }
+        });
+      },
+      {
+        threshold: 0.1,
+      }
+    );
 
-<style>
-	main {
-		margin: auto;
-		padding: 1rem;
-		width: 800px;
-		max-width: calc(100% - 2rem);
-		color: white;
-		font-size: 20px;
-		line-height: 1.6;
-	}
-	.astro-a {
-		position: absolute;
-		top: -32px;
-		left: 50%;
-		transform: translatex(-50%);
-		width: 220px;
-		height: auto;
-		z-index: -1;
-	}
-	h1 {
-		font-size: 4rem;
-		font-weight: 700;
-		line-height: 1;
-		text-align: center;
-		margin-bottom: 1em;
-	}
-	.text-gradient {
-		background-image: var(--accent-gradient);
-		-webkit-background-clip: text;
-		-webkit-text-fill-color: transparent;
-		background-size: 400%;
-		background-position: 0%;
-	}
-	.instructions {
-		margin-bottom: 2rem;
-		border: 1px solid rgba(var(--accent-light), 25%);
-		background: linear-gradient(rgba(var(--accent-dark), 66%), rgba(var(--accent-dark), 33%));
-		padding: 1.5rem;
-		border-radius: 8px;
-	}
-	.instructions code {
-		font-size: 0.8em;
-		font-weight: bold;
-		background: rgba(var(--accent-light), 12%);
-		color: rgb(var(--accent-light));
-		border-radius: 4px;
-		padding: 0.3em 0.4em;
-	}
-	.instructions strong {
-		color: rgb(var(--accent-light));
-	}
-	.link-card-grid {
-		display: grid;
-		grid-template-columns: repeat(auto-fit, minmax(24ch, 1fr));
-		gap: 2rem;
-		padding: 0;
-	}
-</style>
+    const cards = document.querySelectorAll(".animate-appear");
+    cards.forEach((card) => observer.observe(card));
+  });
+</script>
+
+<Layout title={"iON"}>
+  <Navbar />
+  <main class="px-8 relative">
+
+    <!-- Ion explore section -->
+    <section class="min-h-screen flex justify-center items-center relative bg-white">
+      <!-- Background Circle -->
+      <div class="absolute z-0 w-[405px] h-[405px] bg-[#feeff1] rounded-full right-[10%] top-[15%] flex justify-center items-center">
+        <div class="h-[90px] rotate-[7.77deg] px-6 py-3 bg-white rounded-xl shadow flex-col justify-start items-start">
+          <div class="flex gap-3 mb-2">
+            <div class="p-2 bg-[#fea598] rounded-full">
+              <Image
+                width="16"
+                height="16"
+                alt="Instagram icon"
+                src="/instagram-icon.svg"
+              />
+            </div>
+            <div class="p-2 bg-[#fea598] rounded-full">
+              <Image
+                width="16"
+                height="16"
+                alt="TikTok icon"
+                src="/tiktok-icon.svg"
+              />
+            </div>
+            <div class="p-2 bg-[#fea598] rounded-full">
+              <Image
+                width="16"
+                height="16"
+                alt="YouTube icon"
+                src="/youtube-icon.svg"
+              />
+            </div>
+          </div>
+          <div class="self-stretch text-center text-black text-sm font-normal font-['Inter'] leading-relaxed tracking-tight">
+            Social Media
+          </div>
+        </div>
+      </div>
+    
+      <!-- Main Content -->
+      <div class="flex flex-col items-center justify-center z-10 text-center">
+        <p class="text-[#0d0c22] text-2xl font-medium font-['Mulish'] tracking-tight mb-10">
+          Harness the power of social data with
+        </p>
+        <h1 class="text-[#ed707e] text-[130px] font-extrabold font-['Urbanist'] tracking-[2.6px] mb-8">
+          ION Explore
+        </h1>
+        <p class="text-[#9e9ea7] text-lg font-normal font-['Mulish'] tracking-wide mb-14">
+          Driving business growth with data through influencer marketing
+        </p>
+        <button class="h-10 px-10 py-2 bg-[#0d0c22] rounded-lg text-white text-base font-medium font-['Urbanist'] leading-normal tracking-wide hover:bg-[#1a1a2e] active:bg-[#33334d] transition-colors duration-300">
+          Book a Demo
+        </button>
+      </div>
+    </section>
+    
+
+    <!-- Featured Solutions section -->
+    <section class="min-h-screen flex justify-center items-start">
+      <div class="w-full mx-auto">
+        <h2
+          class="text-center text-[#ed707e] text-5xl font-extrabold font-['Urbanist'] tracking-wide mb-14">
+          Featured Solutions
+        </h2>
+        <div class="animate-appear flex justify-center gap-4">
+          {solutionsCards.map((card) => (
+            <FeaturedSolutionsCard {...card}>
+              <!-- Rendering Mini Card Content -->
+              <div set:html={card.miniCard} />
+            </FeaturedSolutionsCard>
+          ))}
+        </div>
+      </div>
+    </section>
+
+    <!-- Benefits section -->
+    <section class="h-screen flex justify-center items-center bg-white">
+      <div>
+        <h2 class="text-center text-[#ed707e] text-5xl font-extrabold font-['Urbanist'] tracking-wide mb-14">
+          Benefits
+        </h2>
+    
+        <div class="animate-appear max-w-6xl mx-auto">
+          <!-- First Row (Two Columns) -->
+          <div class="flex flex-col md:flex-row gap-6 justify-center">
+            {benefits.slice(0, 2).map((benefit) => (
+              <Benefit {...benefit} />
+            ))}
+          </div>
+    
+          <!-- Second Row (Three Columns) -->
+          <div class="grid grid-cols-1 md:grid-cols-3 gap-6 mt-6 justify-center">
+            {benefits.slice(2).map((benefit) => (
+              <Benefit {...benefit} />
+            ))}
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- About ionkol section -->
+    <section class="h-screen flex justify-center items-center ">
+      <div class="animate-appear bg-[#fff7f8]  transform opacity-0 translate-y-10 rounded-[40px] p-32 relative">
+        <h2 class="text-center text-[#0d0c22] text-5xl font-semibold font-['Urbanist'] tracking-wide mb-5">
+          About IonKOL
+        </h2>
+        
+        <p class="text-center text-[#0d0c22] text-lg font-normal font-['Mulish'] leading-7 tracking-tight mb-20 max-w-[875px]">
+          IonKOL takes the guesswork out of influencer marketing. We empower businesses to effortlessly find, evaluate, and partner with the right influencers, driving impactful marketing campaigns that deliver results. With our intuitive platform, starting with Instagram, you get actionable insights at a fraction of the cost, ensuring your brand reaches its full potential.
+        </p>
+        
+        <div class="flex justify-around gap-10">
+          <div class="space-y-2">
+            <div class="text-center text-[#ed707e] text-[82px] font-bold font-['Urbanist'] leading-tight tracking-wide">
+              35+
+            </div>
+            <p class="text-center text-[#0d0c22] text-lg font-medium font-['Urbanist'] leading-[27px] tracking-tight">
+              Metrics for impactful partnership
+            </p>
+          </div>
+    
+          <div class="space-y-2">
+            <div class="text-center text-[#ed707e] text-[82px] font-bold font-['Urbanist'] leading-tight tracking-wide">
+              30+
+            </div>
+            <p class="text-center text-[#0d0c22] text-lg font-medium font-['Urbanist'] leading-[27px] tracking-tight">
+              Advanced filter options
+            </p>
+          </div>
+    
+          <div class="space-y-2">
+            <div class="text-center text-[#ed707e] text-[82px] font-bold font-['Urbanist'] leading-tight tracking-wide">
+              25+
+            </div>
+            <p class="text-center text-[#0d0c22] text-lg font-medium font-['Urbanist'] leading-[27px] tracking-tight">
+              Tools to drive results
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+    
+
+    <!-- Why choose ionkol section -->
+    <section class="flex flex-col mb-28">
+      <h2 class="text-[#0d0c22] text-5xl font-semibold font-['Urbanist'] tracking-wide mb-12">
+        Why Choose IonKOL?
+      </h2>
+      
+      <div class="flex justify-center gap-7">
+        {whyIonkol.map((card) => (
+          <div
+            class="animate-appear px-10 py-16 bg-white rounded-[32px] shadow flex flex-col justify-start items-start gap-6">
+            <Image src={card.imageUrl} alt={card.title} height={48} width={48} />
+            
+            <h3 class="text-[#0d0c22] text-3xl font-semibold font-['Urbanist'] leading-[42px] tracking-wide">
+              {card.title}
+            </h3>
+            
+            <p class="text-[#0d0c22] text-lg font-normal font-['Open Sans'] leading-7 tracking-tight">
+              {card.description}
+            </p>
+          </div>
+        ))}
+      </div>
+    </section>
+
+    <!-- Price section -->
+    <section class="flex justify-center items-start">
+      <div class="flex flex-col items-center space-y-14">
+        <h2
+          class="text-center text-5xl font-extrabold font-['Urbanist'] tracking-wide">
+          <span class="text-[#0d0c22]">Pay only for</span>
+          <span class="text-[#ed707e]">what you need</span>
+        </h2>
+
+        <div class="animate-appear flex flex-col items-center space-y-14">
+          <Switcher />
+          <div class="flex flex-wrap justify-center gap-6">
+            {priceCards?.map((card) => <PriceCard {...card} />)}
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Contact us section -->
+    <section class="h-screen flex justify-center items-center">
+      <div
+        class="animate-appear w-full flex justify-center bg-[#fff7f8] transform opacity-0 translate-y-10 rounded-[40px] p-32 relative">
+        <div class="max-w-[654px]">
+          <h1
+            class="text-center text-[#ed707e] text-5xl font-extrabold font-['Urbanist'] tracking-wide mb-4">
+            Get in touch
+          </h1>
+          <p
+            class="text-center text-[#0d0c22] text-base font-medium font-['Mulish'] leading-7 tracking-tight mb-9">
+            We're working hard to bring you the best possible experience. LonKol
+            will launch soon with powerful tools to enhance your influencer
+            marketing strategy. Stay tuned for updates!
+          </p>
+          <form class="flex gap-3" action="/subscribe" method="POST">
+            <input
+              type="email"
+              name="email"
+              placeholder="Email address"
+              aria-label="Email address"
+              required
+              class="flex-1 h-10 px-4 py-2 bg-white rounded-lg border border-[#ffdede] text-base font-medium font-['Urbanist'] leading-normal tracking-wide"
+            />
+            <Button text="Learn more"/>
+          </form>
+        </div>
+      </div>
+    </section>
+  </main>
+  <Footer />
+</Layout>
