--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,8 +20,26 @@ priceCards.sort(
 
 const benefits = [
   {
-    imageUrl: "/bar-chart.svg",
+    imageUrl: "/coins-hand.svg",
     title: "Competative pricing",
+    description:
+      "Certify Instagram, YouTube, and TikTok creators in seconds with compmrehensive audience insights. Make informed desicions with our tool.",
+  },
+  {
+    imageUrl: "/globe.svg",
+    title: "Global Network",
+    description:
+      "Ion Global presence used to provide bussiness owners with local knowledge and expertise",
+  },
+  {
+    imageUrl: "/translate.svg",
+    title: "Multiligual Functionality",
+    description:
+      "Certify Instagram, YouTube, and TikTok creators in seconds with compmrehensive audience insights. Make informed desicions with our tool.",
+  },
+  {
+    imageUrl: "/bar-chart.svg",
+    title: "Accurate Data",
     description:
       "Certify Instagram, YouTube, and TikTok creators in seconds with compmrehensive audience insights. Make informed desicions with our tool.",
   },
@@ -29,25 +47,7 @@ const benefits = [
     imageUrl: "/bar-chart.svg",
     title: "Competative pricing",
     description:
-      "Certify Instagram, YouTube, and TikTok creators in seconds with compmrehensive audience insights. Make informed desicions with our tool.",
-  },
-  {
-    imageUrl: "/bar-chart.svg",
-    title: "Competative pricing",
-    description:
-      "Certify Instagram, YouTube, and TikTok creators in seconds with compmrehensive audience insights. Make informed desicions with our tool.",
-  },
-  {
-    imageUrl: "/bar-chart.svg",
-    title: "Competative pricing",
-    description:
-      "Certify Instagram, YouTube, and TikTok creators in seconds with compmrehensive audience insights. Make informed desicions with our tool.",
-  },
-  {
-    imageUrl: "/bar-chart.svg",
-    title: "Competative pricing",
-    description:
-      "Certify Instagram, YouTube, and TikTok creators in seconds with compmrehensive audience insights. Make informed desicions with our tool.",
+      "Anayize influencers on TikTok, YouTube, and Instagram using the most compmrehensive and updated metrics available.",
   },
 ];
 
@@ -88,6 +88,8 @@ const whyIonkol = [
 ];
 ---
 
+
+<!-- Sections appear animation -->
 <script is:inline>
   document.addEventListener("DOMContentLoaded", () => {
     const observer = new IntersectionObserver(
@@ -105,6 +107,48 @@ const whyIonkol = [
 
     const cards = document.querySelectorAll(".animate-appear");
     cards.forEach((card) => observer.observe(card));
+  });
+</script>
+
+<!-- Numbers count animation -->
+<script is:inline>
+  function countUp(element) {
+    const target = +element.getAttribute('data-target');
+    const speed = 150;
+
+    const increment = target / speed;
+    let count = 0;
+
+    const updateCount = () => {
+      count += increment;
+      if (count < target) {
+        element.innerText = `${Math.ceil(count)}+`;
+        requestAnimationFrame(updateCount);
+      } else {
+        element.innerText = `${target}+`;
+      }
+    };
+
+    updateCount();
+  }
+
+  function handleIntersection(entries, observer) {
+    entries.forEach(entry => {
+      if (entry.isIntersecting) {
+        const countElement = entry.target;
+        countUp(countElement);
+        observer.unobserve(countElement);
+      }
+    });
+  }
+
+  document.addEventListener('DOMContentLoaded', () => {
+    const countElements = document.querySelectorAll('.count');
+    const observer = new IntersectionObserver(handleIntersection, { threshold: 0.5 });
+
+    countElements.forEach(element => {
+      observer.observe(element);
+    });
   });
 </script>
 
@@ -212,19 +256,19 @@ const whyIonkol = [
 
     <!-- About ionkol section -->
     <section class="h-screen flex justify-center items-center ">
-      <div class="animate-appear bg-[#fff7f8]  transform opacity-0 translate-y-10 rounded-[40px] p-32 relative">
+      <div class="animate-appear bg-[#fff7f8] w-full rounded-[40px] p-32 relative">
         <h2 class="text-center text-[#0d0c22] text-5xl font-semibold font-['Urbanist'] tracking-wide mb-5">
           About IonKOL
         </h2>
         
-        <p class="text-center text-[#0d0c22] text-lg font-normal font-['Mulish'] leading-7 tracking-tight mb-20 max-w-[875px]">
+        <p class="text-center mx-auto text-[#0d0c22] text-lg font-normal font-['Mulish'] leading-7 tracking-tight mb-20 max-w-[875px]">
           IonKOL takes the guesswork out of influencer marketing. We empower businesses to effortlessly find, evaluate, and partner with the right influencers, driving impactful marketing campaigns that deliver results. With our intuitive platform, starting with Instagram, you get actionable insights at a fraction of the cost, ensuring your brand reaches its full potential.
         </p>
         
         <div class="flex justify-around gap-10">
           <div class="space-y-2">
-            <div class="text-center text-[#ed707e] text-[82px] font-bold font-['Urbanist'] leading-tight tracking-wide">
-              35+
+            <div class="count text-center text-[#ed707e] text-[82px] font-bold font-['Urbanist'] leading-tight tracking-wide" data-target=35>
+              0
             </div>
             <p class="text-center text-[#0d0c22] text-lg font-medium font-['Urbanist'] leading-[27px] tracking-tight">
               Metrics for impactful partnership
@@ -232,8 +276,8 @@ const whyIonkol = [
           </div>
     
           <div class="space-y-2">
-            <div class="text-center text-[#ed707e] text-[82px] font-bold font-['Urbanist'] leading-tight tracking-wide">
-              30+
+            <div class="count text-center text-[#ed707e] text-[82px] font-bold font-['Urbanist'] leading-tight tracking-wide" data-target=30>
+              0
             </div>
             <p class="text-center text-[#0d0c22] text-lg font-medium font-['Urbanist'] leading-[27px] tracking-tight">
               Advanced filter options
@@ -241,8 +285,8 @@ const whyIonkol = [
           </div>
     
           <div class="space-y-2">
-            <div class="text-center text-[#ed707e] text-[82px] font-bold font-['Urbanist'] leading-tight tracking-wide">
-              25+
+            <div class="count text-center text-[#ed707e] text-[82px] font-bold font-['Urbanist'] leading-tight tracking-wide" data-target=25>
+              0
             </div>
             <p class="text-center text-[#0d0c22] text-lg font-medium font-['Urbanist'] leading-[27px] tracking-tight">
               Tools to drive results
@@ -298,7 +342,38 @@ const whyIonkol = [
     <!-- Contact us section -->
     <section class="h-screen flex justify-center items-center">
       <div
-        class="animate-appear w-full flex justify-center bg-[#fff7f8] transform opacity-0 translate-y-10 rounded-[40px] p-32 relative">
+        class="animate-appear relative w-full flex justify-center bg-[#fff7f8] transform opacity-0 translate-y-10 rounded-[40px] p-32 relative">
+        <!-- Decorative elements -->
+         <div class="absolute top-0 -translate-y-1/4 right-12 h-fit w-fit p-6 bg-white rounded-xl flex-col justify-center items-center gap-2 flex" style={{"box-shadow": "0px 4px 16px 0px rgba(203, 186, 176, 0.25)"}}><Image src='/Bars.svg' alt='bars' width={198} height={128}/>
+          <p class="font-inter text-[14px] font-normal leading-[26px] tracking-[0.002em] text-left">Statistics</p>
+        </div>
+         <div class="absolute top-0 left-0 translate-x-1/2 translate-y-1/2 -rotate-[7.88deg] h-[110px] w-[110px] p-6 bg-white rounded-xl flex-col justify-center items-center gap-2 flex" style={{"box-shadow": "0px 4px 16px 0px rgba(203, 186, 176, 0.25)"}}>
+          <p class="font-inter text-[16px] text-[#F87217] font-normal leading-[24px] tracking-[0.002em] text-center">
+          8.22k
+          </p>
+          <p class="font-open-sans text-[12px] font-normal leading-[16px] tracking-[0.002em] text-center"> 
+            Eng.</br>Followers
+          </p>
+         </div>
+         <p></p>
+         <div class="absolute bottom-0 left-0 translate-y-1/3 translate-x-1/4 rotate-[4.33deg] h-[138px] w-[211px] p-6 bg-white rounded-xl flex-col justify-center items-start gap-2 flex" style={{"box-shadow": "0px 4px 16px 0px rgba(203, 186, 176, 0.25)"}}>
+          <div class="flex items-center gap-2">
+            <Image src='/girl-placeholder-2.png' alt='girl' width={32} height={32}/>
+            <div class="font-inter text-[14px] font-medium leading-[26px] tracking-[0.002em] text-left">Mikki Adams</div>
+          </div>
+          <div class="flex items-center gap-2 mb-2">
+            <Image src='/girl-placeholder-3.png' alt='girl' width={32} height={32}/>
+            <div class="font-inter text-[14px] font-medium leading-[26px] tracking-[0.002em] text-left">Jakie Town</div>
+          </div>
+          <div class="font-inter mx-auto text-[14px] font-normal leading-[26px] tracking-[0.002em] text-center">Influencers</div>
+         </div>
+         <div class="absolute bottom-0 right-0 translate-y-1/4 -translate-x-1/4 rotate-[2.84deg] h-fit w-fit p-6 bg-white rounded-xl justify-center items-center gap-2 flex" style={{"box-shadow": "0px 4px 16px 0px rgba(203, 186, 176, 0.25)"}}>
+          <Image src='/3-girls.png' alt='girls' width={80} height={34}/>
+          <div><span>Liked by</span> <span class="font-medium">ann_sunny</span> <span>and</span> <span class="font-medium">7 888 others</span></div>
+         </div>
+
+
+        <!-- Main content -->
         <div class="max-w-[654px]">
           <h1
             class="text-center text-[#ed707e] text-5xl font-extrabold font-['Urbanist'] tracking-wide mb-4">
