--- a/src/components/FeaturedSolutionsCard.astro
+++ b/src/components/FeaturedSolutionsCard.astro
@@ -7,7 +7,7 @@ interface Props {
   miniCard: string;
 }
 
-const { title, description} = Astro.props;
+const { title, description } = Astro.props;
 ---
 
 <div class="bg-[#fff7f8] rounded-[40px] p-6 md:p-12 lg:p-24 xl:p-32 relative">
@@ -19,10 +19,13 @@ const { title, description} = Astro.props;
     class="text-[#0d0c22] text-base md:text-lg lg:text-base font-normal font-['Mulish'] leading-7 tracking-tight mb-9">
     {description}
   </p>
-  <Button text="Learn more" type="fill" />
+  <a href="https://o0gkwgc.88.198.20.118.sslip.io/sign-up">
+    <Button text="Learn more" type="fill" /></a
+  >
+
   <div class="h-12"></div>
   <div
-  class="absolute scale-75 md:scale-100 md:right-1/2 md:translate-x-1/2 h-fit w-fit p-6 bg-white rounded-xl shadow flex-col justify-center items-center gap-2 flex transition-transform duration-300 transform-gpu">
-  <div><slot /></div>
-</div>
+    class="absolute scale-75 md:scale-100 md:right-1/2 md:translate-x-1/2 h-fit w-fit p-6 bg-white rounded-xl shadow flex-col justify-center items-center gap-2 flex transition-transform duration-300 transform-gpu">
+    <div><slot /></div>
+  </div>
 </div>
