responsive layout and deploy files

--- a/src/components/FeaturedSolutionsCard.astro
+++ b/src/components/FeaturedSolutionsCard.astro
@@ -25,7 +25,7 @@ const { title, description } = Astro.props;
 
   <div class="h-12"></div>
   <div
-    class="absolute scale-75 md:scale-100 md:right-1/2 md:translate-x-1/2 h-fit w-fit p-6 bg-white rounded-xl shadow flex-col justify-center items-center gap-2 flex transition-transform duration-300 transform-gpu">
+    class="absolute hidden sm:block scale-50 sm:right-0 sm:-translate-y-1/3 lg:scale-100 lg:right-1/2 lg:translate-x-1/2 h-fit w-fit p-6 bg-white rounded-xl shadow flex-col justify-center items-center gap-2 flex transition-transform duration-300 transform-gpu">
     <div><slot /></div>
   </div>
 </div>
