--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,26 +1,36 @@
-<footer class="w-full h-fit bg-[#f9f9f9] flex justify-between px-24 py-10" role="contentinfo">
-  <div class="flex flex-col">
-    <h2 class="text-[#0d0c22] text-[28px] font-bold font-['Urbanist'] tracking-tight mb-4">
+<footer
+  class="w-full h-fit bg-[#f9f9f9] flex flex-wrap flex-col md:flex-row justify-between sm:items-center px-8 md:px-16 lg:px-24 py-10"
+  role="contentinfo">
+  
+  <div class="flex flex-col mb-8 sm:mb-10 sm:text-center">
+    <h2
+      class="text-[#0d0c22] text-2xl sm:text-3xl font-bold font-['Urbanist'] tracking-tight mb-4">
       iON
     </h2>
-    <p class="max-w-64 text-[#9e9ea7] text-lg font-normal font-['Open Sans Hebrew'] leading-[27px] tracking-tight">
+    <p
+      class="max-w-64 text-[#9e9ea7] text-base sm:text-lg font-normal font-['Open Sans Hebrew'] leading-[27px] tracking-tight">
       Driving business growth with data through influencer marketing.
     </p>
   </div>
 
-  <nav aria-label="Footer Navigation" class="flex gap-6">
+  <nav aria-label="Footer Navigation" class="flex flex-wrap gap-8 sm:gap-12 justify-center">
     <div>
-      <h3 class="text-[#0d0c22] text-lg font-medium font-['Urbanist'] leading-normal tracking-tight mb-4">
+      <h3
+        class="text-[#0d0c22] text-lg font-medium font-['Urbanist'] leading-normal tracking-tight mb-4 text-center sm:text-left">
         Services
       </h3>
-      <ul class="flex flex-col gap-3">
+      <ul class="flex flex-col gap-3 text-center sm:text-left">
         <li>
-          <a href="#" class="text-[#9e9ea7] text-base font-normal font-['Mulish'] leading-normal tracking-tight">
+          <a
+            href="#"
+            class="text-[#9e9ea7] text-base font-normal font-['Mulish'] leading-normal tracking-tight">
             Ion Explore
           </a>
         </li>
         <li>
-          <a href="#" class="text-[#9e9ea7] text-base font-normal font-['Mulish'] leading-normal tracking-tight">
+          <a
+            href="#"
+            class="text-[#9e9ea7] text-base font-normal font-['Mulish'] leading-normal tracking-tight">
             Ion Analyze
           </a>
         </li>
@@ -28,17 +38,22 @@
     </div>
 
     <div>
-      <h3 class="text-[#0d0c22] text-lg font-medium font-['Urbanist'] leading-normal tracking-tight mb-4">
+      <h3
+        class="text-[#0d0c22] text-lg font-medium font-['Urbanist'] leading-normal tracking-tight mb-4 text-center sm:text-left">
         Get Started
       </h3>
-      <ul class="flex flex-col gap-3">
+      <ul class="flex flex-col gap-3 text-center sm:text-left">
         <li>
-          <a href="#" class="text-[#9e9ea7] text-base font-normal font-['Mulish'] leading-normal tracking-tight">
+          <a
+            href="#"
+            class="text-[#9e9ea7] text-base font-normal font-['Mulish'] leading-normal tracking-tight">
             Contact us
           </a>
         </li>
         <li>
-          <a href="#" class="text-[#9e9ea7] text-base font-normal font-['Mulish'] leading-normal tracking-tight">
+          <a
+            href="#"
+            class="text-[#9e9ea7] text-base font-normal font-['Mulish'] leading-normal tracking-tight">
             Get a demo
           </a>
         </li>
@@ -46,37 +61,50 @@
     </div>
 
     <div>
-      <h3 class="text-[#0d0c22] text-lg font-medium font-['Urbanist'] leading-normal tracking-tight mb-4">
+      <h3
+        class="text-[#0d0c22] text-lg font-medium font-['Urbanist'] leading-normal tracking-tight mb-4 text-center sm:text-left">
         Who We Are
       </h3>
-      <ul class="flex flex-col gap-3">
+      <ul class="flex flex-col gap-3 text-center sm:text-left">
         <li>
-          <a href="#" class="text-[#9e9ea7] text-base font-normal font-['Mulish'] leading-normal tracking-tight">
+          <a
+            href="#"
+            class="text-[#9e9ea7] text-base font-normal font-['Mulish'] leading-normal tracking-tight">
             About us
           </a>
         </li>
         <li>
-          <a href="#" class="text-[#9e9ea7] text-base font-normal font-['Mulish'] leading-normal tracking-tight">
+          <a
+            href="#"
+            class="text-[#9e9ea7] text-base font-normal font-['Mulish'] leading-normal tracking-tight">
             Blog
           </a>
         </li>
         <li>
-          <a href="#" class="text-[#9e9ea7] text-base font-normal font-['Mulish'] leading-normal tracking-tight">
+          <a
+            href="#"
+            class="text-[#9e9ea7] text-base font-normal font-['Mulish'] leading-normal tracking-tight">
             Case study
           </a>
         </li>
         <li>
-          <a href="#" class="text-[#9e9ea7] text-base font-normal font-['Mulish'] leading-normal tracking-tight">
+          <a
+            href="#"
+            class="text-[#9e9ea7] text-base font-normal font-['Mulish'] leading-normal tracking-tight">
             FAQs
           </a>
         </li>
         <li>
-          <a href="#" class="text-[#9e9ea7] text-base font-normal font-['Mulish'] leading-normal tracking-tight">
+          <a
+            href="#"
+            class="text-[#9e9ea7] text-base font-normal font-['Mulish'] leading-normal tracking-tight">
             Privacy Policy
           </a>
         </li>
         <li>
-          <a href="#" class="text-[#9e9ea7] text-base font-normal font-['Mulish'] leading-normal tracking-tight">
+          <a
+            href="#"
+            class="text-[#9e9ea7] text-base font-normal font-['Mulish'] leading-normal tracking-tight">
             Terms of Service
           </a>
         </li>
@@ -84,4 +112,3 @@
     </div>
   </nav>
 </footer>
-
