--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -276,40 +276,40 @@ const whyIonkol = [
     </section>
 
     <!-- About ionkol section -->
-    <section id="About" class="h-screen flex justify-center items-center ">
-      <div class="animate-appear bg-[#fff7f8] w-full rounded-[40px] p-32 relative">
-        <h2 class="text-center text-[#0d0c22] text-5xl font-semibold font-['Urbanist'] tracking-wide mb-5">
+    <section id="About" class="min-h-screen flex justify-center items-center">
+      <div class="animate-appear bg-[#fff7f8] w-full rounded-[40px] mb-20 p-8 sm:p-16 lg:p-32 relative">
+        <h2 class="text-center text-[#0d0c22] text-3xl sm:text-4xl lg:text-5xl font-semibold font-['Urbanist'] tracking-wide mb-5">
           About IonKOL
         </h2>
         
-        <p class="text-center mx-auto text-[#0d0c22] text-lg font-normal font-['Mulish'] leading-7 tracking-tight mb-20 max-w-[875px]">
+        <p class="text-center mx-auto text-[#0d0c22] text-base sm:text-lg font-normal font-['Mulish'] leading-6 sm:leading-7 tracking-tight mb-10 sm:mb-16 lg:mb-20 max-w-[90%] lg:max-w-[875px]">
           IonKOL takes the guesswork out of influencer marketing. We empower businesses to effortlessly find, evaluate, and partner with the right influencers, driving impactful marketing campaigns that deliver results. With our intuitive platform, starting with Instagram, you get actionable insights at a fraction of the cost, ensuring your brand reaches its full potential.
         </p>
         
-        <div class="flex justify-around gap-10">
+        <div class="flex flex-col sm:flex-row justify-around gap-8 sm:gap-10">
           <div class="space-y-2">
-            <div class="count text-center text-[#ed707e] text-[82px] font-bold font-['Urbanist'] leading-tight tracking-wide" data-target=35>
+            <div class="count text-center text-[#ed707e] text-[64px] sm:text-[72px] lg:text-[82px] font-bold font-['Urbanist'] leading-tight tracking-wide" data-target="35">
               0
             </div>
-            <p class="text-center text-[#0d0c22] text-lg font-medium font-['Urbanist'] leading-[27px] tracking-tight">
+            <p class="text-center text-[#0d0c22] text-base sm:text-lg font-medium font-['Urbanist'] leading-[24px] sm:leading-[27px] tracking-tight">
               Metrics for impactful partnership
             </p>
           </div>
     
           <div class="space-y-2">
-            <div class="count text-center text-[#ed707e] text-[82px] font-bold font-['Urbanist'] leading-tight tracking-wide" data-target=30>
+            <div class="count text-center text-[#ed707e] text-[64px] sm:text-[72px] lg:text-[82px] font-bold font-['Urbanist'] leading-tight tracking-wide" data-target="30">
               0
             </div>
-            <p class="text-center text-[#0d0c22] text-lg font-medium font-['Urbanist'] leading-[27px] tracking-tight">
+            <p class="text-center text-[#0d0c22] text-base sm:text-lg font-medium font-['Urbanist'] leading-[24px] sm:leading-[27px] tracking-tight">
               Advanced filter options
             </p>
           </div>
     
           <div class="space-y-2">
-            <div class="count text-center text-[#ed707e] text-[82px] font-bold font-['Urbanist'] leading-tight tracking-wide" data-target=25>
+            <div class="count text-center text-[#ed707e] text-[64px] sm:text-[72px] lg:text-[82px] font-bold font-['Urbanist'] leading-tight tracking-wide" data-target="25">
               0
             </div>
-            <p class="text-center text-[#0d0c22] text-lg font-medium font-['Urbanist'] leading-[27px] tracking-tight">
+            <p class="text-center text-[#0d0c22] text-base sm:text-lg font-medium font-['Urbanist'] leading-[24px] sm:leading-[27px] tracking-tight">
               Tools to drive results
             </p>
           </div>
@@ -319,22 +319,22 @@ const whyIonkol = [
     
 
     <!-- Why choose ionkol section -->
-    <section class="flex flex-col mb-28">
-      <h2 class="text-[#0d0c22] text-5xl font-semibold font-['Urbanist'] tracking-wide mb-12">
+    <section class="flex flex-col mb-28 px-4">
+      <h2 class="text-[#0d0c22] text-3xl sm:text-4xl md:text-5xl font-semibold font-['Urbanist'] tracking-wide mb-8 sm:mb-10 md:mb-12">
         Why Choose IonKOL?
       </h2>
       
-      <div class="flex justify-center gap-7">
+      <div class="flex flex-wrap justify-center gap-7">
         {whyIonkol.map((card) => (
           <div
-            class="animate-appear px-10 py-16 bg-white rounded-[32px] shadow flex flex-col justify-start items-start gap-6">
+            class="animate-appear px-8 sm:px-10 py-10 sm:py-12 md:py-16 bg-white rounded-[32px] shadow flex flex-col justify-start items-start gap-4 sm:gap-6 max-w-full sm:max-w-[45%] md:max-w-[30%]">
             <Image src={card.imageUrl} alt={card.title} height={48} width={48} />
             
-            <h3 class="text-[#0d0c22] text-3xl font-semibold font-['Urbanist'] leading-[42px] tracking-wide">
+            <h3 class="text-[#0d0c22] text-2xl sm:text-3xl font-semibold font-['Urbanist'] leading-[32px] sm:leading-[42px] tracking-wide">
               {card.title}
             </h3>
             
-            <p class="text-[#0d0c22] text-lg font-normal font-['Open Sans'] leading-7 tracking-tight">
+            <p class="text-[#0d0c22] text-base sm:text-lg font-normal font-['Open Sans'] leading-6 sm:leading-7 tracking-tight">
               {card.description}
             </p>
           </div>
@@ -365,10 +365,10 @@ const whyIonkol = [
       <div
         class="animate-appear relative w-full flex justify-center bg-[#fff7f8] transform opacity-0 translate-y-10 rounded-[40px] p-32 relative">
         <!-- Decorative elements -->
-         <div class="absolute top-0 -translate-y-1/4 right-12 h-fit w-fit p-6 bg-white rounded-xl flex-col justify-center items-center gap-2 flex" style={{"box-shadow": "0px 4px 16px 0px rgba(203, 186, 176, 0.25)"}}><Image src='/Bars.svg' alt='bars' width={198} height={128}/>
+         <div class="scale-50 md:scale-75 lg:scale-100 absolute top-0 -translate-y-1/4 right-12 h-fit w-fit p-6 bg-white rounded-xl flex-col justify-center items-center gap-2 flex" style={{"box-shadow": "0px 4px 16px 0px rgba(203, 186, 176, 0.25)"}}><Image src='/Bars.svg' alt='bars' width={198} height={128}/>
           <p class="font-inter text-[14px] font-normal leading-[26px] tracking-[0.002em] text-left">Statistics</p>
         </div>
-         <div class="absolute top-0 left-0 translate-x-1/2 translate-y-1/2 -rotate-[7.88deg] h-[110px] w-[110px] p-6 bg-white rounded-xl flex-col justify-center items-center gap-2 flex" style={{"box-shadow": "0px 4px 16px 0px rgba(203, 186, 176, 0.25)"}}>
+         <div class="hidden scale-50 md:scale-75 lg:scale-100 absolute top-0 left-0 translate-x-1/2 translate-y-1/2 -rotate-[7.88deg] h-[110px] w-[110px] p-6 bg-white rounded-xl flex-col justify-center items-center gap-2 md:flex" style={{"box-shadow": "0px 4px 16px 0px rgba(203, 186, 176, 0.25)"}}>
           <p class="font-inter text-[16px] text-[#F87217] font-normal leading-[24px] tracking-[0.002em] text-center">
           8.22k
           </p>
@@ -377,7 +377,7 @@ const whyIonkol = [
           </p>
          </div>
          <p></p>
-         <div class="absolute bottom-0 left-0 translate-y-1/3 translate-x-1/4 rotate-[4.33deg] h-[138px] w-[211px] p-6 bg-white rounded-xl flex-col justify-center items-start gap-2 flex" style={{"box-shadow": "0px 4px 16px 0px rgba(203, 186, 176, 0.25)"}}>
+         <div class="scale-50 md:scale-75 lg:scale-100 absolute bottom-0 left-0 translate-y-1/3 translate-x-1/4 rotate-[4.33deg] h-[138px] w-[211px] p-6 bg-white rounded-xl flex-col justify-center items-start gap-2 flex" style={{"box-shadow": "0px 4px 16px 0px rgba(203, 186, 176, 0.25)"}}>
           <div class="flex items-center gap-2">
             <Image src='/girl-placeholder-2.png' alt='girl' width={32} height={32}/>
             <div class="font-inter text-[14px] font-medium leading-[26px] tracking-[0.002em] text-left">Mikki Adams</div>
@@ -388,7 +388,7 @@ const whyIonkol = [
           </div>
           <div class="font-inter mx-auto text-[14px] font-normal leading-[26px] tracking-[0.002em] text-center">Influencers</div>
          </div>
-         <div class="absolute bottom-0 right-0 translate-y-1/4 -translate-x-1/4 rotate-[2.84deg] h-fit w-fit p-6 bg-white rounded-xl justify-center items-center gap-2 flex" style={{"box-shadow": "0px 4px 16px 0px rgba(203, 186, 176, 0.25)"}}>
+         <div class="hidden scale-50 md:scale-75 lg:scale-100 absolute bottom-0 right-0 translate-y-1/4 -translate-x-1/4 rotate-[2.84deg] h-fit w-fit p-6 bg-white rounded-xl justify-center items-center gap-2 md:flex" style={{"box-shadow": "0px 4px 16px 0px rgba(203, 186, 176, 0.25)"}}>
           <Image src='/3-girls.png' alt='girls' width={80} height={34}/>
           <div><span>Liked by</span> <span class="font-medium">ann_sunny</span> <span>and</span> <span class="font-medium">7 888 others</span></div>
          </div>
