added seo improvements

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,6 @@
 ---
+title: "The Ultimate Guide to Baking Sourdough Bread"
+description: "Learn the secrets to creating delicious and authentic sourdough bread at home with this comprehensive guide."
 import Layout from "../layouts/Layout.astro";
 import directus from "../../lib/directus";
 import { readItems } from "@directus/sdk";
