--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -9,20 +9,25 @@ const { title } = Astro.props;
 <!doctype html>
 <html lang="en">
   <head>
+    <title>{title}</title>
     <meta charset="UTF-8" />
     <meta name="description" content="Social media analyzing tool" />
     <meta name="viewport" content="width=device-width" />
     <meta property="og:title" content="Try IONKOL" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://ionkol.com" />
-    <meta property="og:image" content="/public/ionkol-logo.jpeg" />
+    <meta property="og:image" content="/ionkol-logo.jpg" />
+    <meta
+      property="og:image:secure_url"
+      content="https://www.ionkol.com/ionkol-logo.jpg"
+    />
     <meta
       property="og:description"
       content="All in on social media analyzing tool. Explore. Analyze. Discover."
     />
     <meta property="og:site_name" content="IONKOL" />
     <meta property="og:locale" content="en_US" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
