--- a/src/components/slider/MainContent.astro
+++ b/src/components/slider/MainContent.astro
@@ -13,7 +13,7 @@ const { title, textColor, description, buttonLabel } = Astro.props as MainConten
   <p class="text-[#0d0c22] text-lg font-medium font-['Mulish'] tracking-tight mb-10 lg:text-2xl">
     Harness the power of social data with
   </p>
-  <h1 class={`text-[${textColor}] text-5xl font-extrabold font-['Urbanist'] tracking-[2.6px] mb-8 lg:text-[130px]`}>
+  <h1 class={`${textColor} text-5xl font-extrabold font-['Urbanist'] tracking-[2.6px] mb-8 lg:text-[130px]`}>
     {title}
   </h1>
   <p class="text-[#9e9ea7] text-base font-normal font-['Mulish'] tracking-wide mb-14 lg:text-lg">
