--- a/src/components/slider/Swiper.astro
+++ b/src/components/slider/Swiper.astro
@@ -5,7 +5,7 @@ import Circle from "./Circle.astro";
 const slides = [
   {
     title: 'ION Explore',
-    textColor: '#ed707e',
+    textColor: 'text-[#ed707e]',
     description: 'Driving business growth with data through influencer marketing',
     buttonLabel: 'Book a Demo',
     circleBackgroundColor: 'bg-[#feeff1]',
@@ -29,7 +29,7 @@ const slides = [
   },
   {
     title: 'ION Discover',
-    textColor: '#FFD572',
+    textColor: 'text-[#FFD572]',
     description: 'Driving business growth with data through influencer marketing',
     buttonLabel: 'Book a Demo',
     circleBackgroundColor: 'bg-[#FEF5F0]',
@@ -56,7 +56,7 @@ const slides = [
 
   {
     title: 'ION Analyze',
-    textColor: '#F9679A',
+    textColor: 'text-[#F9679A]',
     description: 'Driving business growth with data through influencer marketing',
     buttonLabel: 'Book a Demo',
     circleBackgroundColor: 'bg-[#FFE9EF]',
@@ -73,10 +73,9 @@ const slides = [
       `
     ),
   },
-  // New slide 2: ION Connect
   {
     title: 'ION Connect',
-    textColor: '#BB6DCF',
+    textColor: 'text-[#BB6DCF]',
     description: 'Driving business growth with data through influencer marketing',
     buttonLabel: 'Book a Demo',
     circleBackgroundColor: 'bg-[#FFE9EF]',
