--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -101,10 +101,10 @@ const whyIonkol = [
         el: ".swiper-pagination",
       },
       loop: true,
-      // autoplay: {
-      //   delay: 6000,
-      //   disableOnInteraction: false,
-      // },
+      autoplay: {
+        delay: 6000,
+        disableOnInteraction: false,
+      },
       navigation: {
         nextEl: ".swiper-button-next",
         prevEl: ".swiper-button-prev",
