--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -72,10 +72,10 @@ const SIGN_UP_URL = "https://app.ionkol.com/sign-up";
   <!-- Sign-up and Login buttons for mobile -->
   <div class="flex flex-col gap-4">
     <a href={SIGN_UP_URL}>
-      <Button text="Sign-up" type="outline" />
+      <Button className="w-full" text="Sign-up" type="outline" />
     </a>
     <a href={SIGN_IN_URL}>
-      <Button text="Login" />
+      <Button className="w-full" text="Login" />
     </a>
   </div>
 </div>
