--- a/src/components/ui/Button.astro
+++ b/src/components/ui/Button.astro
@@ -10,7 +10,7 @@ const { type = "fill", className = "", text = "" } = Astro.props;
 const baseButtonStyle =
   "h-10 px-10 py-2 rounded-lg justify-center items-center gap-4 inline-flex text-center text-base font-normal font-['Mulish'] leading-normal tracking-wide transition-colors duration-300 whitespace-nowrap";
 
-let buttonStyle = className + " " + baseButtonStyle;
+let buttonStyle = baseButtonStyle + " " + className;
 
 if (type === "fill") {
   buttonStyle +=
