--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -91,7 +91,7 @@ const whyIonkol = [
 ---
 
 <!-- Swiper init -->
-<script>
+<!-- <script>
   document.addEventListener("DOMContentLoaded", async () => {
     const { Swiper } = await import("swiper");
     const {Autoplay } = await import("swiper/modules");
@@ -104,7 +104,7 @@ const whyIonkol = [
       },
     });
   });
-</script>
+</script> -->
 <style>
   :root {
     --swiper-theme-color: #ed707e;
