--- a/src/components/slider/MainContent.astro
+++ b/src/components/slider/MainContent.astro
@@ -11,7 +11,7 @@ const { title, textColor, description, buttonLabel } = Astro.props as MainConten
 
 <div class="flex flex-col relative items-center justify-center z-10 text-center px-4">
   <p class="text-[#0d0c22] text-lg font-medium font-['Mulish'] tracking-tight mb-10 lg:text-2xl">
-    Harness the power of social data with
+    AI influencer analytics platform
   </p>
   <h1 class={`${textColor} text-5xl font-extrabold font-['Urbanist'] tracking-[2.6px] mb-8 lg:text-[130px]`}>
     {title}
