--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -4,12 +4,12 @@
   
   <div class="flex flex-col mb-8 sm:mb-10 sm:text-center">
     <h2
-      class="text-[#0d0c22] text-2xl sm:text-3xl font-bold font-['Urbanist'] tracking-tight mb-4">
+      class="text-[#0d0c22] text-2xl sm:text-3xl font-bold font-['Urbanist'] tracking-tight mb-4 text-left">
       iON
     </h2>
     <p
-      class="max-w-64 text-[#9e9ea7] text-base sm:text-lg font-normal font-['Open Sans Hebrew'] leading-[27px] tracking-tight">
-      Data-driven success
+      class="max-w-64 text-[#9e9ea7] text-base sm:text-lg font-normal font-['Open Sans Hebrew'] leading-[27px] tracking-tight text-left">
+      Drivings bussiness growth with data thought influencer marketing
     </p>
   </div>
 
@@ -47,14 +47,14 @@
           <a
             href="#"
             class="text-[#9e9ea7] text-base font-normal font-['Mulish'] leading-normal tracking-tight">
-            Contact us
+            Book a demo
           </a>
         </li>
         <li>
           <a
             href="#"
             class="text-[#9e9ea7] text-base font-normal font-['Mulish'] leading-normal tracking-tight">
-            Get a demo
+            Contact us
           </a>
         </li>
       </ul>
