--- a/src/components/PriceCard.astro
+++ b/src/components/PriceCard.astro
@@ -10,6 +10,7 @@ interface Props {
   cta_text: string;
   description: string[];
   subheader: string;
+  cardBgColor: string;
 }
 
 const {
@@ -19,11 +20,13 @@ const {
   cta_text,
   description,
   subheader,
+  cardBgColor,
 } = Astro.props;
 ---
 
 <div
-  class="w-[318px] py-7 px-6 bg-white rounded-[32px] shadow flex flex-col justify-start items-center gap-6">
+  class="w-[318px] py-7 px-6 rounded-[32px] shadow flex flex-col justify-start items-center gap-6"
+  style={{ backgroundColor: cardBgColor }}>
   <div class="flex flex-col justify-center items-center">
     <h3
       class="text-center text-[#0d0c22] text-3xl font-semibold font-['Urbanist'] leading-[42px] tracking-wide mb-6">
